fix (backend): add GORM remove unused code... SWAGGER is NOT working
