# src/backend/go-crud-api/internal/controllers/user_controller.go
@@ -20,13 +20,16 @@ func NewUserController(service services.UserServiceInterface) *UserController {
 	return &UserController{UserService: service}
 }
 
-// GetUsers godoc
-// @Summary Get all users
-// @Description Get details of all users
+// GetUsers @Summary Get a user by ID
+// @Description Get a user by ID
 // @Tags users
-// @Produce json
-// @Success 200 {array} models.User
-// @Router /users [get]
+// @Accept  json
+// @Produce  json
+// @Param id path int true "User ID"
+// @Success 200 {object} models.User
+// @Failure 400 {object} map[string]string
+// @Failure 404 {object} map[string]string
+// @Router /users/{id} [get]
 func (c *UserController) GetUsers(w http.ResponseWriter, r *http.Request) {
 	users, err := c.UserService.GetAllUsers()
 	if err != nil {
@@ -38,19 +41,15 @@ func (c *UserController) GetUsers(w http.ResponseWriter, r *http.Request) {
 	c.handleJSONResponse(w, users, http.StatusOK)
 }
 
-// GetUser godoc
-// @Summary Get a user by ID
-// @Description Get details of a user by ID
-// @Tags users
-// @Produce json
-// @Param id path int true "User ID"
-// @Success 200 {object} models.User
-// @Failure 404 {object} map[string]string
-// @Router /users/{id} [get]
 func (c *UserController) GetUser(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
-	id, _ := strconv.Atoi(vars["id"])
-	user, err := c.UserService.GetUserByID(id)
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		// Respond with a 400 status code if the ID is not a valid integer.
+		c.handleError(w, err, http.StatusBadRequest)
+		return
+	}
+	user, err := c.UserService.GetUserByID(uint(id))
 	if err != nil {
 		// If the user is not found, respond with a 404 status code.
 		c.handleError(w, err, http.StatusNotFound)
@@ -60,22 +59,12 @@ func (c *UserController) GetUser(w http.ResponseWriter, r *http.Request) {
 	c.handleJSONResponse(w, user, http.StatusOK)
 }
 
-// CreateUser godoc
-// @Summary Create a new user
-// @Description Create a new user with the input payload
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param user body models.User true "Create user"
-// @Success 201 {object} models.User
-// @Failure 400 {object} map[string]string
-// @Failure 500 {object} map[string]string
-// @Router /users [post]
 func (c *UserController) CreateUser(w http.ResponseWriter, r *http.Request) {
 	var user models.User
 	err := json.NewDecoder(r.Body).Decode(&user)
 	if err != nil {
-		// If decoding the request body fails, do not proceed.
+		// If decoding the request body fails, respond with a 400 status code.
+		c.handleError(w, err, http.StatusBadRequest)
 		return
 	}
 	err = c.UserService.CreateUser(&user)
@@ -88,28 +77,21 @@ func (c *UserController) CreateUser(w http.ResponseWriter, r *http.Request) {
 	c.handleJSONResponse(w, user, http.StatusCreated)
 }
 
-// UpdateUser godoc
-// @Summary Update an existing user
-// @Description Update an existing user by ID with the input payload
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param id path int true "User ID"
-// @Param user body models.User true "Update user"
-// @Success 200 {object} models.User
-// @Failure 400 {object} map[string]string
-// @Failure 404 {object} map[string]string
-// @Failure 500 {object} map[string]string
-// @Router /users/{id} [put]
 func (c *UserController) UpdateUser(w http.ResponseWriter, r *http.Request) {
 	var user models.User
 	err := json.NewDecoder(r.Body).Decode(&user)
 	if err != nil {
-		// If decoding the request body fails, do not proceed.
+		// If decoding the request body fails, respond with a 400 status code.
+		c.handleError(w, err, http.StatusBadRequest)
 		return
 	}
 	vars := mux.Vars(r)
-	id, _ := strconv.Atoi(vars["id"])
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		// Respond with a 400 status code if the ID is not a valid integer.
+		c.handleError(w, err, http.StatusBadRequest)
+		return
+	}
 	user.ID = uint(id)
 
 	err = c.UserService.UpdateUser(&user)
@@ -122,20 +104,16 @@ func (c *UserController) UpdateUser(w http.ResponseWriter, r *http.Request) {
 	c.handleJSONResponse(w, user, http.StatusOK)
 }
 
-// DeleteUser godoc
-// @Summary Delete a user
-// @Description Delete a user by ID
-// @Tags users
-// @Produce json
-// @Param id path int true "User ID"
-// @Success 200 {object} map[string]string
-// @Failure 404 {object} map[string]string
-// @Router /users/{id} [delete]
 func (c *UserController) DeleteUser(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
-	id, _ := strconv.Atoi(vars["id"])
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		// Respond with a 400 status code if the ID is not a valid integer.
+		c.handleError(w, err, http.StatusBadRequest)
+		return
+	}
 
-	err := c.UserService.DeleteUser(id)
+	err = c.UserService.DeleteUser(uint(id))
 	if err != nil {
 		// If the user is not found, respond with a 404 status code.
 		c.handleError(w, err, http.StatusNotFound)
